add github for SQL

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
         <hr>
         <footer class="text-center">
             <pre> https://github.com/aidilazhar/tyrell-cards.git</pre>
+            <pre> https://github.com/aidilazhar/tyrell-sql.git</pre>
             <pre>https://db.aidilazhar.org | tyrell_user | YtrKPZDeaCn0x0E7</pre>
            
         </footer>
